2008-04-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.98 ==

2008-04-25  Andy Wingo  <wingo@pobox.com>

	* doc/*.texi: Update docs.

2008-04-24  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gconf-support.c (scm_c_gconf_value_to_scm)
	(sniff_list_type, scm_c_scm_to_gconf_value, notify_proc): Fix
	deprecation warnings.

2008-04-10  Andy Wingo  <wingo@unquote>

	* == Released guile-gnome-platform version 2.15.97 ==

2008-04-10  Andy Wingo  <wingo@unquote>

	* NEWS: Update NEWS.

2008-04-08  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gconf-support.c (scm_c_gconf_value_to_scm): Use newer
	GValue accessors.

2007-12-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.96 ==

2007-12-06  Andy Wingo  <wingo@pobox.com>

	* doc/guile-gnome-gconf.texi (Top): 
	* doc/undocumented.texi: Add section for undocumented exports.

	* doc/defuns-*.texi: Regenerated.

	* tests/wrapset.api: Update.

	* gnome/overrides/gconf.defs: Ignore functions that operate on
	opaque types or are otherwise unsafe for scheme.

	* doc/guile-gnome-gconf.texi (Top): Add type index.

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* tests/Makefile.am:
	* tests/wrapset.api:
	* tests/wrapset.scm: Add API regression test suite.

2007-11-01  Andy Wingo  <wingo@pobox.com>

	* Makefile.am:
	* doc/: Add documentation, generated from upstream gtk-doc.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gconf.defs ("gconf_engine_get_for_addresses"):
	Ignore gconf-engine-notify-add.
