@@ -1,3 +1,9 @@
+2008-05-01  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/gconf-support.c: Fix scm_with_guile + notify-add usage.
+
+	* doc/overview.texi (Overview): Add example code.
+
 2008-04-25  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.98 ==
